--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,23 @@
 {
   "author": "noushadbhuiyan7@gmail.com",
-  "browser_action": {
-    "default_icon": {
-      "128": "images/icon-128.png",
-      "16": "images/icon-16.png"
-    }
+  "description": "Chrome Extension to change the Fiverr icon and title when a notification is received.",
+  "icons": {
+    "128": "images/icon-128.png",
+    "16": "images/icon-16.png"
+  },
+  "manifest_version": 3,
+  "name": "Fiverr Notification Enhancer",
+  "permissions": [
+    "tabs",
+    "notifications",
+    "activeTab",
+    "storage"
+  ],
+  "short_name": "Fiverr Notifier",
+  "update_url": "https://clients2.google.com/service/update2/crx",
+  "version": "1.3.5",
+  "background": {
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
@@ -19,26 +32,20 @@
       "run_at": "document_end"
     }
   ],
-  "description": "Chrome Extension to change the Fiverr icon and title when a notification is received.",
-  "icons": {
-    "128": "images/icon-128.png",
-    "16": "images/icon-16.png"
-  },
-  "manifest_version": 2,
-  "name": "Fiverr Notification Enhancer",
-  "permissions": [
-    "tabs",
-    "notifications",
-    "activeTab",
-    "storage"
-  ],
-  "short_name": "Fiverr Notifier",
-  "update_url": "https://clients2.google.com/service/update2/crx",
-  "version": "1.3.5",
-  "background": {
-    "service_worker": "background.js"
+  "browser_action": {
+    "default_icon": {
+      "128": "images/icon-128.png",
+      "16": "images/icon-16.png"
+    }
   },
   "web_accessible_resources": [
-    "https://cdn0.iconfinder.com/data/icons/socicons-2/512/Fiverr-512.png"
+    {
+      "resources": [
+        "https://cdn0.iconfinder.com/data/icons/socicons-2/512/Fiverr-512.png"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
   ]
 }
